// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Order Happy Path Should return 201 when mollie order created from cart with both Line Items and Custom Line Items 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2021-12-21T07:33:07+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"cartId\\":\\"84e5f274-c413-404e-b938-ffb45ce63f61\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\",\\"createPayment\\":{}}",
    "response": "{\\"mollieOrderId\\":\\"ord_ca1j7q\\",\\"checkoutUrl\\":\\"https://www.mollie.com/checkout/order/ca1j7q\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created from cart with both Line Items and Custom Line Items 2`] = `
Object {
  "action": "setStatusInterfaceText",
  "interfaceText": "created",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created from cart with both Line Items and Custom Line Items 3`] = `
Object {
  "action": "setKey",
  "key": "ord_ca1j7q",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created from cart with both Line Items and Custom Line Items 4`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created from cart with both Line Items and Custom Line Items 5`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "tr_D6V5dfjWfz",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created from cart with both Line Items and Custom Line Items 6`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-12-21T07:33:07+00:00",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay later method (Klarnapaylater) 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2021-12-20T11:17:23+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"cartId\\":\\"08f21547-92c8-4519-9fd8-84dc05827f0f\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\",\\"createPayment\\":{}}",
    "response": "{\\"mollieOrderId\\":\\"ord_l2idwq\\",\\"checkoutUrl\\":\\"https://www.mollie.com/checkout/order/l2idwq\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay later method (Klarnapaylater) 2`] = `
Object {
  "action": "setStatusInterfaceText",
  "interfaceText": "created",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay later method (Klarnapaylater) 3`] = `
Object {
  "action": "setKey",
  "key": "ord_l2idwq",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay later method (Klarnapaylater) 4`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay later method (Klarnapaylater) 5`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "tr_FCc42uPfJx",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay later method (Klarnapaylater) 6`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-12-20T11:17:23+00:00",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay now method (iDEAL) 1`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createOrder",
    "createdAt": "2021-12-20T10:15:15+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"cartId\\":\\"08f21547-92c8-4519-9fd8-84dc05827f0f\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\",\\"createPayment\\":{}}",
    "response": "{\\"mollieOrderId\\":\\"ord_8xnw8a\\",\\"checkoutUrl\\":\\"https://www.mollie.com/checkout/order/8xnw8a\\",\\"transactionId\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay now method (iDEAL) 2`] = `
Object {
  "action": "setStatusInterfaceText",
  "interfaceText": "created",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay now method (iDEAL) 3`] = `
Object {
  "action": "setKey",
  "key": "ord_8xnw8a",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay now method (iDEAL) 4`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay now method (iDEAL) 5`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "tr_J5R48EP58J",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;

exports[`Create Order Happy Path Should return 201 when mollie order created successfully using pay now method (iDEAL) 6`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-12-20T10:15:15+00:00",
  "transactionId": "2b5f68ad-ae94-4bf1-ae41-7096e5142f89",
}
`;
